--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -21,6 +21,10 @@
     <RuntimeIdentifiers Condition="'$(_TargetPlatformIsWindows)' == 'True'">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(_TargetPlatformIsWindows)' == 'True'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <!-- Build acceleration -->
   <PropertyGroup>
     <AccelerateBuildsInVisualStudio Condition="'$(Configuration)' == 'Debug'">true</AccelerateBuildsInVisualStudio>
@@ -34,7 +38,7 @@
 
   <!-- Maui -->
   <PropertyGroup>
-    <MauiVersion>8.0.100</MauiVersion>
+    <MauiVersion>9.0.30</MauiVersion>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -46,20 +50,24 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <SentryVersion>4.13.0</SentryVersion>
+    <SentryVersion>5.0.1</SentryVersion>
   </PropertyGroup>
 
   <PropertyGroup>
-    <SkiaSharpVersion>2.88.9</SkiaSharpVersion>
+    <SkiaSharpVersion>3.116.1</SkiaSharpVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <MapsuiVersion>5.0.0-beta.7</MapsuiVersion>
   </PropertyGroup>
 
   <PropertyGroup>
     <WinToolkitVersion>8.1.240916</WinToolkitVersion>
-    <WinAppSDKVersion>1.6.240923002</WinAppSDKVersion>
-    <CsWinRTVersion>2.1.6</CsWinRTVersion>
+    <WinAppSDKVersion>1.6.250108002</WinAppSDKVersion>
+    <CsWinRTVersion>2.2.0</CsWinRTVersion>
     <WinSDKBuildToolsVersion>10.0.22621.3233</WinSDKBuildToolsVersion>
-    <WindowsSdkPackageVersion>10.0.22621.53</WindowsSdkPackageVersion>
-    <MvvmToolkitVersion>8.3.2</MvvmToolkitVersion>
+    <WindowsSdkPackageVersion>10.0.22621.56</WindowsSdkPackageVersion>
+    <MvvmToolkitVersion>8.4.0</MvvmToolkitVersion>
   </PropertyGroup>
 
   <PropertyGroup>
