--- a/.gitignore
+++ b/.gitignore
@@ -248,6 +248,7 @@ ModelManifest.xml
 .DS_Store
 *.xcuserstate
 /Maui/SimpleWeather.Maui.AppWidget/DerivedData
+/Maui/MapKitProxy
 /Maui/StoreKit2Proxy
 /Maui/WidgetCenterProxy
 /Maui/SimpleWeather.Maui/GoogleService-Info*.plist
