--- a/.gitignore
+++ b/.gitignore
@@ -279,6 +279,8 @@ API_KEY.txt
 /SimpleWeather.Weather-API/Keys/Keys.cs
 /SimpleWeather.Weather-API/Keys/Keys.cs.bak
 /SimpleWeather.Weather-API/Keys/Keys.7z
+/SimpleWeather.Weather-API/Keys/MapBoxConfig.cs
+/SimpleWeather.Weather-API/Keys/MapBoxConfig.cs.bak
 /SimpleWeather.Weather-API/Keys/WeatherKitConfig.cs
 /SimpleWeather.Weather-API/Keys/WeatherKitConfig.cs.bak
 /Maui/SimpleToolkit
