--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -36,11 +36,12 @@
         <AssemblyName>SimpleWeather</AssemblyName>
     </PropertyGroup>
 
-	<!-- Native AOT -->
+	<!-- Native AOT
 	<PropertyGroup>
 		<IsAotCompatible>true</IsAotCompatible>
 		<PublishAot>true</PublishAot>
 	</PropertyGroup>
+	-->
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-ios|AnyCPU'">
 		<RuntimeIdentifier>ios-arm64</RuntimeIdentifier>
