--- a/Maui/SimpleWeather.Maui.AppWidget/widgetExtension/widgetExtension.entitlements
+++ b/Maui/SimpleWeather.Maui.AppWidget/widgetExtension/widgetExtension.entitlements
@@ -4,6 +4,8 @@
 <dict>
 	<key>application-identifier</key>
 	<string>F5MCLX6AR8.com.thewizrd.simpleweather.widget</string>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.thewizrd.simpleweather</string>
