--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Project>
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Version>5.11.0</Version>
     <Nullable>warnings</Nullable>
     <!-- Version Code Format (.NET Version, App Version, Build Number) -->
