--- a/SimpleWeather.Windows/SimpleWeather.Windows.csproj
+++ b/SimpleWeather.Windows/SimpleWeather.Windows.csproj
@@ -38,8 +38,10 @@
   
   <!-- Native AOT -->
   <PropertyGroup>
+    <!-- https://github.com/microsoft/microsoft-ui-xaml/issues/10214
     <IsAotCompatible>true</IsAotCompatible>
     <PublishAot>true</PublishAot>
+    -->
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
@@ -82,6 +84,7 @@
     <PackageReference Include="CommunityToolkit.WinUI.Media" Version="$(WinToolkitVersion)" />
     <PackageReference Include="CommunityToolkit.WinUI.Notifications" Version="7.1.2" />
     <PackageReference Include="CommunityToolkit.WinUI.Triggers" Version="$(WinToolkitVersion)" />
+    <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.3.2" />
     <PackageReference Include="SkiaSharp.Extended" Version="2.0.0" />
     <PackageReference Include="SkiaSharp.Skottie" Version="$(SkiaSharpVersion)" />
     <PackageReference Include="SkiaSharp.Views.WinUI" Version="$(SkiaSharpVersion)" />
