SimpleWeather.Windows: v5.12.0-build3

--- a/SimpleWeather.Windows/Properties/launchSettings.json
+++ b/SimpleWeather.Windows/Properties/launchSettings.json
@@ -4,13 +4,13 @@
       "commandName": "MsixPackage",
       "doNotLaunchApp": true,
       "hotReloadEnabled": true,
-      "nativeDebugging": true
+      "nativeDebugging": false
     },
     "SimpleWeather.Windows (Unpackaged)": {
       "commandName": "Project",
       "doNotLaunchApp": true,
       "hotReloadEnabled": true,
-      "nativeDebugging": true
+      "nativeDebugging": false
     }
   }
 }
